# job-interviews-crossref

./: README.md  pyproject.toml
notebooks/: 0_get_sample.ipynb  1_preprocess_data.ipynb  2_get_ref_types.ipynb  3_analysis.ipynb  helpers.py
