[tool.poetry]
name = "interview"
version = "0.1.0"
description = ""
authors = ["bubblbu <asura.enkhbayar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = {version="^1.24.0", extras=["pyarrow"]}
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
pydantic = "^2.10.6"
crossrefapi = "^1.6.0"
tqdm = "^4.67.1"
ratelimit = "^2.2.1"
scipy = "^1.15.2"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
